сделал создание нового user от admin с ролями: manager, cashier
